in PostRecipesPreview, changed icon FaTimesCircle to BsXCircleFill; in PostHeader, added class name post-header to Row component; in PostFullscreen (wip), added code to display carousel of recipes for viewer column, for message/comments column added spacer for the Accounts section, PostHeader, post message, and PostFooter; in PostFooter, added classname post-footer to main div wrapper; in Header, changed HeaderMinimal close button to use icon BsXLg and a wrapping span that fades in/out when mouse hovered; in App.css: added style for postfullscreen-header-spacer so post message is pushed down and does not overlap with Account dropdown, and disappear when screensize is smaller; fixed img too big issue on carousel by setting height to 100vh (same height set on postfullscreen) and also setting object-fit to scale-down so img is not squished when screensize is smaller than img width but larger than media query set max-width, and when screensize is 900px or less the image (max) height is set to 50vh, -viewer and -comments is fixed on top and bottom with -comments having overflow-y set to auto expecting it to scrolldown to show full post message and comments, -comments height set to specific value 44.2vh since using 50vh will make it too big and cause scrollbar to appear, wip comment textarea will stick to bottom; added padding-top to post-header so it is a bit lower than where Account border is; added style for PostFullscreen close button so it's opacity fades in/out when mouse hovers in/out; updated carousel next/prev area width to be narrower (8%);

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,37 @@ div.postfullscreen {
   height: 100vh;
   flex-flow: row;
 }
+div.postfullscreen-header-spacer {
+  position: sticky;
+  height: 3.5rem;
+  border-bottom: 0.5px solid #3E4042;
+  margin-left: calc(1.5rem * -.5);
+  margin-right: calc(1.5rem * -.5);
+  z-index: 1;
+}
+div.postfullscreen-viewer {
+
+}
+div.postfullscreen-viewer .carousel .carousel-inner .carousel-item {
+  text-align: center;
+}
+div.postfullscreen-viewer .carousel img {
+  max-height: 100vh;
+  height: 100vh;
+  max-width: 100%;
+  object-fit: scale-down;
+}
 div.postfullscreen-comments {
   -ms-flex: 0 0 400px;
   flex: 0 0 400px;
-} 
+}
+div.postfullscreen-comments .post-header {
+  padding-top: 0.5rem;
+}
 
 @media (min-width: 900px) {
-  #postfullscreen-header {
+  /* if screensize wider than 900px then make background transparent */
+  .postfullscreen-header {
     --bs-bg-opacity: 0 !important;
     background: transparent !important;
   }
@@ -18,12 +42,50 @@ div.postfullscreen-comments {
   div.postfullscreen {
     flex-flow: column;
   }
+  div.postfullscreen-viewer .carousel img {
+    max-height: 50vh;
+    height: 50vh;
+  }
   div.postfullscreen-viewer {
     margin-top: 3.5rem;
+    max-height: 50vh;
+    position: fixed;
   }
   div.postfullscreen-comments {
-    flex: 1 0 auto;
-  } 
+    position: fixed;
+    bottom: 0;
+    max-height: 50vh;
+    flex-basis: auto;
+    height: 44.2vh;
+    overflow-y: auto;
+  }
+  div.postfullscreen-header-spacer {
+    display: none;
+  }
+}
+
+span.my-btn-close-wrapper {
+  display: block;
+  padding: .4rem .7rem .6rem .6rem;
+  border-radius: 50rem;
+  background:rgba(0, 0, 0, 0.199);
+  opacity: .65;
+  transition: all .3s ease-in-out;
+}
+span.my-btn-close-wrapper:hover {
+  opacity: 1;
+}
+svg.my-btn-close {
+  color: rgba(255, 255, 255, 0.856);
+  opacity: .65;
+  transition: all .3s ease-in-out;
+}
+span.my-btn-close-wrapper:hover svg.my-btn-close {
+  opacity: 1;
+}
+
+div.postfullscreen-viewer > div.carousel > .carousel-control-next, div.postfullscreen-viewer > div.carousel > .carousel-control-prev {
+  width: 8%;
 }
 
 div.mid-content {
